mgr: don't access global config when holding gil

When dumping the config the cpython may drop/take the gil which
may lead to a deadlock when another cpython thread is trying to
get the config lock while holding the gil.

Fixes: https://tracker.ceph.com/issues/58269
Signed-off-by: Mykola Golub <mgolub@suse.com>